@@ -24,8 +24,9 @@
 
 int main(int argc,char **argv)
 {
-    e0dbfs = DFLT_DBFS;
     init_getstring(argc,argv);
+    csoundPreCompile(csoundCreate(NULL));
+    e0dbfs = DFLT_DBFS;
     sndinfo(argc,argv);
     return 0;
 }
